REGRESSION (r66452): Sending of multipart forms with files is broken. https://bugs.webkit.org/show_bug.cgi?id=45159

Reviewed by Darin Adler.

WebCore:

* platform/network/FormData.cpp:
(WebCore::FormData::appendKeyValuePairItems):

LayoutTests:

Updated related tests to include dumping content type.

* http/tests/local/formdata/send-form-data-expected.txt:
* http/tests/local/formdata/send-form-data-with-sliced-file-expected.txt:
* http/tests/local/formdata/upload-events-expected.txt:
* http/tests/xmlhttprequest/resources/multipart-post-echo.php:

Canonical link: https://commits.webkit.org/57531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66773 268f45cc-cd09-0410-ab3c-d52691b4dbfc